Bug 476117 - Cursor preview area does not match preview icons
Summary: Cursor preview area does not match preview icons
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_cursortheme (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-10-26 15:52 UTC by Fushan Wen
Modified: 2023-10-28 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-10-26 15:52:21 UTC
STEPS TO REPRODUCE
1. Set global scale to 200%
2. Open Cursor Theme KCM
3. Hover the cursor over some preview icons

OBSERVED RESULT
Wrong cursor preview
Comment 1 Nate Graham 2023-10-26 21:43:53 UTC
Cannot reproduce at 200% scale on Wayland. Can you attach a screenshot or screen recording?
Comment 2 Bug Janitor Service 2023-10-27 16:14:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3447
Comment 3 Fushan Wen 2023-10-28 07:42:54 UTC
Git commit bbfb387955c0ac77823f924b49ec3b9baeae03fe by Fushan Wen.
Committed on 28/10/2023 at 06:44.
Pushed by fusionfuture into branch 'master'.

kcms/cursortheme: fix wrong cursor preview position on X11

When matching the cursor position in hoverMoveEvent, the position from a
QHoverEvent belongs to the logical coordinates but the saved cursor
positions belong to device coordinates on X11, so devicePixelRatio is
needed to convert the position from a QHoverEvent.
FIXED-IN: 6.0

M  +17   -11   kcms/cursortheme/xcursor/previewwidget.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/bbfb387955c0ac77823f924b49ec3b9baeae03fe