kcms/cursortheme: fix wrong cursor preview position on X11

When matching the cursor position in hoverMoveEvent, the position from a
QHoverEvent belongs to the logical coordinates but the saved cursor
positions belong to device coordinates on X11, so devicePixelRatio is
needed to convert the position from a QHoverEvent.

BUG: 476117
FIXED-IN: 6.0